--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -2,8 +2,8 @@
     <div class="text-center">
         <h2>Buy Products</h2>
     </div>
-    <div class="alert alert-light border d-flex align-items-center">
-        <strong class="text-success">Laptop</strong> &nbsp; is sleected and added in cart
+    <div class="alert alert-light border d-flex align-items-center" *ngIf="addedProduct">
+        <strong class="text-success">{{addedProduct}}</strong> &nbsp; is selected and added in cart
         <button class="btn btn-success ms-auto">Checkout</button>
     </div>
     <hr class="mb-3">
@@ -43,7 +43,7 @@
         <div class="col-md-12 bg-success text-white text-center py-4">
             <h2 *ngIf="!productSelected">Please Select any Product</h2>
             <h2 *ngIf="productSelected">{{selectedProduct}} is Selected</h2>
-            <button class="btn">Add to Cart</button>
+            <button class="btn" (click)="onAddProduct()" >Add to Cart</button>
         </div>
     </div>
 
