--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,14 @@
 <div class="page-area">
-    <h2>Contact</h2>
+    <h2>Contact Us</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, perferendis voluptas laboriosam, officiis labore
         possimus magni, vel qui quisquam cupiditate atque libero molestiae voluptates ullam harum voluptatum incidunt
         odit exercitationem.</p>
+    <div class="row">
+        <div class="col-md-6">
+            <app-card></app-card>
+        </div>
+        <!-- <div class="col-md-6">
+            <app-card2></app-card2>
+        </div> -->
+    </div>
 </div>
