--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -40,11 +40,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 bg-success text-white text-center py-4">
-            <h2 *ngIf="!productSelected">Please Select any Product</h2>
-            <h2 *ngIf="productSelected">{{selectedProduct}} is Selected</h2>
-            <button class="btn" (click)="onAddProduct()" >Add to Cart</button>
-        </div>
+        <app-child class="w-100"
+        (addedProduct)="onAddedProduct($event)"
+        [productSelected]="proSelected" 
+        [selectedProduct]="selProduct"
+        ></app-child>
+        
+        
     </div>
 
 </div>
