--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,5 +6,5 @@ h2, p{
     width: 800px;
     margin: auto;
     padding: 30px;
-    background-color: aqua;
+    background-color: rgb(214, 229, 229);
 }
