--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <nav>
     <ul class="nav nav-tabs">
       <li class="nav-item"><a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/">Home</a></li>
@@ -10,4 +10,7 @@
     </ul>
   </nav>
 </header>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<h1>{{title | uppercase}} </h1>
+<h1>{{title | slice : 3: 6 | uppercase}} </h1>
