--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,23 @@
 <div class="page-area">
     <h2>Home</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, perferendis voluptas laboriosam, officiis labore
-        possimus magni, vel qui quisquam cupiditate atque libero molestiae voluptates ullam harum voluptatum incidunt
-        odit exercitationem.</p>
+    <div #box>
+        <h1>User Name is <span class="text-success">{{userName}} </span> </h1>
+    </div>
+    <div class="row">
+        <!-- <div class="col-md-6">
+            <app-comp1></app-comp1>
+        </div> -->
+        <div class="col-md-6">
+            <app-comp2>
+                <p #childCon>This is ng content paragraph</p>
+            </app-comp2>
+        </div>
+        <!-- <div class="col-md-6">
+            <app-comp3></app-comp3>
+        </div>
+        <div class="col-md-6">
+            <app-comp4></app-comp4>
+        </div> -->
+    </div>
+    
 </div>
